Sat Jan 23 18:37:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* ChangeLog: Fixing wrong time on previous commit, and adding
	  previous commit message to svn [ci skip]

Sat Jan 23 18:30:30 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Simplifying Unicode data file download logic to make
	  it more reliable [Bug #12007]

Sat Jan 23 16:29:42 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Fixed a logical error, improved documentation

Sat Jan 23 11:42:43 2016  Peter Suschlik  <ps@neopoly.de>

	* README.md: Use SVG Travis badge over PNG for better quality and
	  device support.  [Fix GH-1214] [Fix GH-1216]

Sat Jan 23 11:29:16 2016  Pascal Betz  <pascal.betz@simplificator.com>

	* lib/csv.rb: Update documentation of CSV header converter for
	  r45498, [GH-575].  [Fix GH-1215]

Fri Jan 22 17:36:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (VM_ASSERT): use RUBY_ASSERT instead of rb_bug.

	* error.c (rb_assert_failure): assertion with stack dump.

	* ruby_assert.h (RUBY_ASSERT): new header for the assertion.

Fri Jan 22 00:25:57 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (fetch_name_with_level): allow non word characters
	  at the first character.  [Feature #11949]

	* regparse.c (fetch_name): ditto.

Thu Jan 21 17:34:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): honor Marshal.load post proc
	  value for TYPE_LINK.  by Hiroshi Nakamura <nahi@ruby-lang.org>
	  https://github.com/ruby/ruby/pull/1204 fix GH-1204

Thu Jan 21 16:37:50 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (update-rubyspec): fix r53208 like r53451.

Wed Jan 20 20:58:25 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk, Makefile.in: update-config_files is only for Unix
	  platforms.

Wed Jan 20 17:13:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/extlibs.rb: add --cache option to change cache directory.

Tue Jan 19 17:03:40 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
